ajout des commentaires manquant

--- a/sass/bases/_typographie.scss
+++ b/sass/bases/_typographie.scss
@@ -1,3 +1,6 @@
+/* ..... police générale, normalisation lien, div main wrapper ......*/
+/* _typographie */
+
 .main-wrapper{
     min-width: $size-main-w-min;
 }
