--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@charset "UTF-8";
+/* ...........mixins ............. */
+/* _mixin.scss */
+/* bordure basique pour repérage des blocs durant le travail */
+/* positionement des éléments du bloc au centre */
+/* couleur de bouton dégrader rose et violet */
+/* mixin pour créer des sélecteur */
+/* .......... mixin pour ajouter des media quieries ............... */
+/* _mixin-media.scss */
+/* ............. animation keyframes .............. */
+/* _keyframes.scss */
+/* grossisement du coeur */
 @keyframes heart {
   0% {
     transform: scale(0);
@@ -6,6 +18,7 @@
     transform: scale(1);
   }
 }
+/* animation pour le plateau en bois */
 @keyframes circle {
   0% {
     transform: translateX(0px) scaleY(1) rotate(0deg);
@@ -23,6 +36,7 @@
     transform: translateX(0px) scaleY(1) rotate(360deg);
   }
 }
+/* animation pour l'assiette */
 @keyframes circle-2 {
   0% {
     transform: translateX(-400px) scaleY(0.2);
@@ -40,6 +54,7 @@
     transform: scaleY(1) rotate(0deg);
   }
 }
+/* animation apparition ohmyfood */
 @keyframes food-name {
   0% {
     opacity: 0;
@@ -51,6 +66,7 @@
     opacity: 1;
   }
 }
+/* disparition de l'animation */
 @keyframes gone {
   0% {
     opacity: 1;
@@ -65,6 +81,11 @@
     transform: scale(0);
   }
 }
+/* ........ maps .......... */
+/* breakpoint media queries */
+/* ................ Animation .................... */
+/* _anim-load */
+/* bloc contenant l'animation */
 .animation {
   position: absolute;
   z-index: 101;
@@ -74,6 +95,7 @@
   display: flex;
   justify-content: center;
   animation: gone 200ms 3000ms ease-in-out both;
+  /* div contenant les cercles anim */
 }
 .animation__circle {
   position: absolute;
@@ -84,6 +106,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* plateau bois annim */
+  /* grande assiette anim */
+  /* petite assiette anim */
+  /* nom oh my food en centre des assiette anim */
 }
 .animation__circle-1 {
   position: absolute;
@@ -128,6 +154,10 @@
   animation: food-name 1s 2s ease-in-out both;
 }
 
+/* icone qui affiche "nouveau" dans les onglets restaurant */
+/* ....... bouton like , coeur qui change de couleur et grandit ..... */
+/* _heart-like.scss */
+/* position et taille coeur */
 .color-heart-color, .color-heart {
   position: absolute;
   font-size: 25px;
@@ -139,6 +169,7 @@
   z-index: 1;
 }
 
+/* ajout couleur du coeur et réglage scale et index */
 .color-heart-color {
   z-index: 2;
   background: linear-gradient(120deg, #FF79DA 0%, #9556DC 100%);
@@ -149,6 +180,7 @@
   transform: scale(0);
 }
 
+/* création d'un bouton invisible placer devant les coeur et qui déclanche l'animation */
 .color-heart-btn {
   z-index: 3;
   position: absolute;
@@ -471,6 +503,8 @@ template {
   display: none;
 }
 
+/* ..... police générale, normalisation lien, div main wrapper ......*/
+/* _typographie */
 .main-wrapper {
   min-width: 300px;
 }
@@ -484,6 +518,9 @@ a {
   font-family: "Roboto", sans-serif;
 }
 
+/* ...... mise en page en-tete acceuil .......*/
+/* _header-acceuil.scss */
+/* logo en tete */
 .heading {
   position: relative;
   height: 65px;
@@ -491,7 +528,9 @@ a {
   box-shadow: 2px 2px 3px rgb(200, 199, 199);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; /* tablette */
+  /* desktop */
+  /* image logo ohmyfood */
 }
 @media screen and (min-width: 768px) {
   .heading {
@@ -506,6 +545,8 @@ a {
 .heading__logo {
   width: 160px;
   margin-top: 10px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .heading__logo {
@@ -519,8 +560,15 @@ a {
   }
 }
 
+/* .......... informations placer sous le logo de tete & explications utilisation site ............... */
+/* localisation / titre / phrase / bouton */
+/* _description-head */
+/* ..... bloc qui contient la section information ...... */
 .description {
   height: 1000px;
+  /* bloc avec la localisation */
+  /* ...... bloc haut avec le titre, la phrase et le bouton ....... */
+  /* ...... Explication sur l'utilisation du site ....... */
 }
 .description__loc {
   width: 100%;
@@ -531,6 +579,10 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* tablette */
+  /* desktop */
+  /* logo localisation */
+  /* nom de la ville, localisation */
 }
 @media screen and (min-width: 768px) {
   .description__loc {
@@ -572,6 +624,9 @@ a {
   align-items: center;
   background-color: #f8f6f6;
   height: 290px;
+  /* titre */
+  /* phrase sous le titre */
+  /* boutons pour aller voir les restaurants */
 }
 .description__company-title {
   width: 65%;
@@ -580,6 +635,7 @@ a {
   font-weight: 600;
   margin-top: 30px;
   margin-bottom: 0px;
+  /* tablette */
 }
 @media screen and (min-width: 768px) {
   .description__company-title {
@@ -593,6 +649,7 @@ a {
   margin-top: 0px;
   margin-bottom: 30px;
   color: #737373;
+  /* tablette */
 }
 @media screen and (min-width: 768px) {
   .description__company-sentance {
@@ -612,6 +669,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  /* tablette */
 }
 @media screen and (min-width: 768px) {
   .description__company-resto {
@@ -623,6 +681,9 @@ a {
 .description__function {
   padding-bottom: 45px;
   margin: 20px;
+  /* titre de la section */
+  /* bloc contenant les 3 etapes de l'explication */
+  /* ........ blocs contenant les explications ....... */
 }
 .description__function-title {
   font-size: 25px;
@@ -634,6 +695,9 @@ a {
     font-size: 30px;
     text-align: center;
   }
+}
+.description__function-liste {
+  /* tablette */
 }
 @media screen and (min-width: 768px) {
   .description__function-liste {
@@ -650,6 +714,12 @@ a {
   border-radius: 25px;
   background-color: #f8f6f6;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
+  /* leger changement de couleur, passage souris */
+  /* chiffre dans le bloc d'explication */
+  /* logo dans le bloc d'explication */
+  /* texte dans le bloc d'explication */
 }
 @media screen and (min-width: 768px) {
   .description__function-1 {
@@ -688,6 +758,8 @@ a {
   border-radius: 15px;
   width: 25px;
   height: 25px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .description__function-1number {
@@ -749,6 +821,12 @@ a {
   border-radius: 25px;
   background-color: #f8f6f6;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
+  /* leger changement de couleur, passage souris */
+  /* chiffre dans le bloc d'explication */
+  /* logo dans le bloc d'explication */
+  /* texte dans le bloc d'explication */
 }
 @media screen and (min-width: 768px) {
   .description__function-2 {
@@ -787,6 +865,8 @@ a {
   border-radius: 15px;
   width: 25px;
   height: 25px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .description__function-2number {
@@ -848,6 +928,12 @@ a {
   border-radius: 25px;
   background-color: #f8f6f6;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
+  /* leger changement de couleur, passage souris */
+  /* chiffre dans le bloc d'explication */
+  /* logo dans le bloc d'explication */
+  /* texte dans le bloc d'explication */
 }
 @media screen and (min-width: 768px) {
   .description__function-3 {
@@ -886,6 +972,8 @@ a {
   border-radius: 15px;
   width: 25px;
   height: 25px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .description__function-3number {
@@ -939,6 +1027,9 @@ a {
   }
 }
 
+/* ............ bloc avec les restaurants ............... */
+/* _resto.scss */
+/* section contenant les choix restaurants .....*/
 .resto {
   background-color: #f8f6f6;
   width: 100%;
@@ -946,11 +1037,22 @@ a {
   position: relative;
   display: flex;
   flex-direction: column;
+  /* tablette */
+  /* bloc avec les restaurants */
+  /* titre de la section restaurant */
+  /* image de présentation restaurant */
+  /* noms des restaurants */
+  /* localisation des restaurants */
+  /* création de 4 blocs pour les 4 restaurants différents */
+  /* ajouts du l'icone "nouveau" */
 }
 @media screen and (min-width: 768px) {
   .resto {
     padding-bottom: 70px;
   }
+}
+.resto__block {
+  /* desktop */
 }
 @media screen and (min-width: 992px) {
   .resto__block {
@@ -967,6 +1069,8 @@ a {
   margin: auto;
   padding-top: 50px;
   padding-bottom: 5px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto__title {
@@ -986,6 +1090,8 @@ a {
   height: 180px;
   object-fit: cover;
   border-radius: 20px 20px 0px 0px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto__img {
@@ -1005,6 +1111,8 @@ a {
   margin-left: 15px;
   margin-bottom: 0px;
   width: 150px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto__nom {
@@ -1024,6 +1132,8 @@ a {
   margin-left: 15px;
   margin-top: 5px;
   padding-bottom: 15px;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto__lieu {
@@ -1047,6 +1157,8 @@ a {
   margin-top: 20px;
   border-radius: 20px;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto-1 {
@@ -1074,6 +1186,8 @@ a {
   margin-top: 20px;
   border-radius: 20px;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto-2 {
@@ -1101,6 +1215,8 @@ a {
   margin-top: 20px;
   border-radius: 20px;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto-3 {
@@ -1128,6 +1244,8 @@ a {
   margin-top: 20px;
   border-radius: 20px;
   box-shadow: 4px 4px 15px #e1e1e1;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .resto-4 {
@@ -1164,11 +1282,22 @@ a {
   align-items: center;
 }
 
+/* ........... pied de page .........*/
+/* _foot.scss */
 .foot {
   background-color: #303030;
   color: white;
   padding: 25px;
   padding-bottom: 40px;
+  /* desktop */
+  /* titre oh my food footer */
+  /* liens avec un logo */
+  /* lien partenariat */
+  /* lien mention legal */
+  /* couleur des liens */
+  /* bloc contenant tout les liens */
+  /* mention legal et contact */
+  /* contact */
 }
 @media screen and (min-width: 992px) {
   .foot {
@@ -1180,6 +1309,8 @@ a {
   margin-top: 0px;
   margin-bottom: 15px;
   font-family: "Shrikhand", cursive;
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .foot__title {
@@ -1199,6 +1330,8 @@ a {
   padding-top: 0px;
   margin-bottom: 0px;
   margin-top: 0px;
+  /* logo */
+  /* texte du lien */
 }
 .foot__propo i, .foot__part i {
   margin: 0px;
@@ -1220,6 +1353,10 @@ a {
 }
 .foot a {
   color: white;
+}
+.foot__liens {
+  /* tablette */
+  /* desktop */
 }
 @media screen and (min-width: 768px) {
   .foot__liens {
