--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,3 +1,7 @@
+/* ............. animation keyframes .............. */
+/* _keyframes.scss */
+
+/* grossisement du coeur */
 @keyframes heart {
     0%{
         transform: scale(0);
@@ -6,7 +10,7 @@
         transform: scale(1);
     }
 }
-
+/* animation pour le plateau en bois */
 @keyframes circle {
     0%{
         transform: translateX(0px) scaleY(1) rotate(0deg);
@@ -24,6 +28,7 @@
         transform: translateX(0px) scaleY(1) rotate(360deg);
     }
 }
+/* animation pour l'assiette */
 @keyframes circle-2 {
     0%{
         transform: translateX(-400px) scaleY(0.2);
@@ -41,6 +46,7 @@
         transform: scaleY(1) rotate(0deg);
     }
 }
+/* animation apparition ohmyfood */
 @keyframes food-name {
     0%{
         opacity: 0;
@@ -53,6 +59,7 @@
     }
     
 }
+/* disparition de l'animation */
 @keyframes gone {
     0%{
         opacity: 1;
