--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -18,6 +18,7 @@ $size-main-w-min: 300px;
 // ........ couleur
 $shadow-head: rgb(200, 199, 199);
 // ....... taille
+$size-logo-retour: 20px;
 $width-head: 100%;
 $height-head: 65px;
 $width-logo-head: 160px;
@@ -27,6 +28,7 @@ $width-logo-head: 160px;
 $color-back: #efebeb;
 $color-txt-explor: white;
 // ........ tailles
+$height-descrip: 775px;
 // localisation 
 $size-logo-loc: 17px;
 $size-txt-loc: 11px;
@@ -49,6 +51,7 @@ $size-num-expl: 25px;
 // ....... couleur
 $color-block-resto: white;
 // ........ taille
+$size-title-resto: 32px;
 $size-title-two: 20px;
 $width-block-resto: 100%;
 $width-title-bloc-resto: 90%; 
