--- a/css/style-resto.css
+++ b/css/style-resto.css
@@ -11,6 +11,7 @@
 /* mixin pour créer des sélecteur */
 /* ............. animation keyframes .............. */
 /* _keyframes.scss */
+/* faire apparaitre les blocs avec le nom des assiettes */
 @keyframes apparition {
   0% {
     transform: translateY(30px);
@@ -24,6 +25,7 @@
     opacity: 1;
   }
 }
+/* fait apparaire le block avec le logo check et fait tourner le logo */
 @keyframes check {
   0% {
     width: 0px;
@@ -47,19 +49,10 @@
 /* grossisement du coeur */
 @keyframes heart {
   0% {
-    top: 0px;
     transform: scale(0);
   }
   100% {
     transform: scale(1);
-  }
-}
-@keyframes heart-resto {
-  0% {
-    transform: translateY(0px) scale(0);
-  }
-  100% {
-    transform: translateY(0px) scale(1);
   }
 }
 /* animation pour le plateau en bois */
@@ -495,38 +488,30 @@ a {
   box-shadow: 2px 2px 3px rgb(200, 199, 199);
   display: flex;
   justify-content: center;
-  align-items: center; /* tablette */
-  /* desktop */
-  /* image logo ohmyfood */
-}
-@media screen and (min-width: 768px) {
-  .heading {
-    height: 94.25px;
-  }
-}
-@media screen and (min-width: 992px) {
-  .heading {
-    height: 143px;
-  }
+  align-items: center; /* image logo ohmyfood */
 }
 .heading__logo {
   width: 160px;
   margin-top: 10px;
-  /* tablette */
-  /* desktop */
 }
+
 @media screen and (min-width: 768px) {
+  .heading {
+    height: 94.25px;
+  }
   .heading__logo {
     width: 224px;
     margin-top: 20px;
   }
 }
 @media screen and (min-width: 992px) {
+  .heading {
+    height: 143px;
+  }
   .heading__logo {
     width: 288px;
   }
 }
-
 /* ........... pied de page .........*/
 /* _foot.scss */
 .foot {
@@ -534,39 +519,18 @@ a {
   color: white;
   padding: 25px;
   padding-bottom: 40px;
-  /* desktop */
   /* titre oh my food footer */
   /* liens avec un logo */
   /* lien partenariat */
   /* lien mention legal */
   /* couleur des liens */
-  /* bloc contenant tout les liens */
-  /* mention legal et contact */
   /* contact */
-}
-@media screen and (min-width: 992px) {
-  .foot {
-    padding-bottom: 60px;
-  }
 }
 .foot__title {
   font-size: 19px;
   margin-top: 0px;
   margin-bottom: 15px;
   font-family: "Shrikhand", cursive;
-  /* tablette */
-  /* desktop */
-}
-@media screen and (min-width: 768px) {
-  .foot__title {
-    font-size: 23px;
-  }
-}
-@media screen and (min-width: 992px) {
-  .foot__title {
-    margin-left: 40px;
-    margin-bottom: 40px;
-  }
 }
 .foot__propo, .foot__part {
   display: flex;
@@ -599,31 +563,36 @@ a {
 .foot a {
   color: white;
 }
-.foot__liens {
-  /* tablette */
-  /* desktop */
+.foot__mail {
+  margin-right: 100px;
 }
+
 @media screen and (min-width: 768px) {
+  .foot__title {
+    font-size: 23px;
+  }
   .foot__liens {
     font-size: 18px;
   }
 }
 @media screen and (min-width: 992px) {
+  .foot {
+    padding-bottom: 60px;
+  }
+  .foot__title {
+    margin-left: 40px;
+    margin-bottom: 40px;
+  }
   .foot__liens {
     display: flex;
     justify-content: space-around;
     max-width: 1000px;
   }
-}
-@media screen and (min-width: 992px) {
   .foot__leg, .foot__mail {
     margin-top: 10px;
   }
 }
-.foot__mail {
-  margin-right: 100px;
-}
-
+/* cadre image et fond gris */
 .menu__image {
   width: 100%;
   height: 300px;
@@ -648,7 +617,11 @@ a {
   font-size: 28px;
 }
 
+/* partie contenant les différentes propositions */
+/* proposition 1 */
 .plate {
+  max-width: 1000px;
+  margin: auto;
   position: relative;
   z-index: 11;
   padding-bottom: 15px;
@@ -727,6 +700,7 @@ a {
   transform: translateX(0px) scaleX(0) rotate(180deg);
 }
 
+/* partie pour activer l'animation check */
 .plate__btn-anim {
   position: absolute;
   opacity: 0.5;
@@ -742,10 +716,12 @@ a {
   animation: check-rotate 300ms both ease-in-out;
 }
 
+/* partie pour faire apparaitre les propositions */
 .apparition {
   animation: apparition 1000ms cubic-bezier(0.02, 0.73, 0.46, 1.06) both;
 }
 
+/* proposition 1 */
 .two-plate {
   position: relative;
   z-index: 11;
@@ -825,6 +801,7 @@ a {
   transform: translateX(0px) scaleX(0) rotate(180deg);
 }
 
+/* partie pour activer l'animation check */
 .two-plate__btn-anim {
   position: absolute;
   opacity: 0.5;
@@ -840,6 +817,7 @@ a {
   animation: check-rotate 300ms both ease-in-out;
 }
 
+/* partie pour faire apparaitre les propositions */
 .two-apparition {
   animation: apparition 1000ms 200ms cubic-bezier(0.02, 0.73, 0.46, 1.06) both;
 }
@@ -923,6 +901,7 @@ a {
   transform: translateX(0px) scaleX(0) rotate(180deg);
 }
 
+/* partie pour activer l'animation check */
 .three-plate__btn-anim {
   position: absolute;
   opacity: 0.5;
@@ -938,10 +917,12 @@ a {
   animation: check-rotate 300ms both ease-in-out;
 }
 
+/* partie pour faire apparaitre les propositions */
 .three-apparition {
   animation: apparition 1000ms 400ms cubic-bezier(0.02, 0.73, 0.46, 1.06) both;
 }
 
+/* bouton commander en fin de page */
 .btn-commande {
   display: flex;
   justify-content: center;
@@ -958,6 +939,118 @@ a {
   box-shadow: rgb(200, 199, 199) 5px 5px 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-plats {
+    top: 360px;
+  }
+  .menu-plats__title h1 {
+    font-size: 33.6px;
+  }
+  .plate__type-dish {
+    font-size: 19.5px;
+  }
+  .plate__type-under {
+    width: 55px;
+    height: 4px;
+  }
+  .plate__type-food-txt-title {
+    font-size: 23px;
+  }
+  .plate__type-food-txt-with {
+    font-size: 20px;
+  }
+  .plate__type-food-price {
+    margin-top: 50px;
+    font-size: 20px;
+  }
+  .plate__type-food i {
+    font-size: 25px;
+    top: 33px;
+    right: 5.5%;
+  }
+  .two-plate__type-dish {
+    font-size: 19.5px;
+  }
+  .two-plate__type-under {
+    width: 55px;
+    height: 4px;
+  }
+  .two-plate__type-food-txt-title {
+    font-size: 23px;
+  }
+  .two-plate__type-food-txt-with {
+    font-size: 20px;
+  }
+  .two-plate__type-food-price {
+    margin-top: 50px;
+    font-size: 20px;
+  }
+  .two-plate__type-food i {
+    font-size: 25px;
+    top: 33px;
+    right: 5.5%;
+  }
+  .three-plate__type-dish {
+    font-size: 19.5px;
+  }
+  .three-plate__type-under {
+    width: 55px;
+    height: 4px;
+  }
+  .three-plate__type-food-txt-title {
+    font-size: 23px;
+  }
+  .three-plate__type-food-txt-with {
+    font-size: 20px;
+  }
+  .three-plate__type-food-price {
+    margin-top: 50px;
+    font-size: 20px;
+  }
+  .three-plate__type-food i {
+    font-size: 25px;
+    top: 33px;
+    right: 5.5%;
+  }
+  .color-heart-btn-resto {
+    right: 50px;
+  }
+  .color-heart-color-resto, .color-heart-resto {
+    right: 55px;
+    font-size: 30px;
+  }
+  .btn-commande {
+    width: 300px;
+    height: 75px;
+    font-size: 23px;
+    border-radius: 38px;
+    margin-top: 30px;
+    margin-bottom: 70px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .menu__image {
+    height: 560px;
+  }
+  .menu-plats {
+    top: 560px;
+  }
+  .menu-plats__title h1 {
+    font-size: 39.2px;
+    width: 900px;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  .color-heart-btn-resto {
+    width: 70px;
+    height: 70px;
+  }
+  .color-heart-color-resto, .color-heart-resto {
+    font-size: 37.5px;
+  }
+}
+/* ajout d'un bouton pour un retour à l'acceuil */
+/* enlever l'ombre du bloc */
 .heading {
   box-shadow: none;
 }
@@ -968,9 +1061,34 @@ a {
   left: 30px;
 }
 
+@media screen and (min-width: 768px) {
+  .heading__retour-acceuil {
+    font-size: 26px;
+    top: 35px;
+    left: 40px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .heading__retour-acceuil {
+    font-size: 36px;
+    top: 55px;
+  }
+}
+/* réglage de la position du footer partie menu */
 .foot {
   position: relative;
-  top: 1450px;
+  top: 1445px;
+}
+
+@media screen and (min-width: 768px) {
+  .foot {
+    top: 1700px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .foot {
+    top: 1880px;
+  }
 }
 
 /*# sourceMappingURL=style-resto.css.map */
