--- a/sass/layout/_btn-retour-acceuil.scss
+++ b/sass/layout/_btn-retour-acceuil.scss
@@ -1,3 +1,5 @@
+/* ajout d'un bouton pour un retour à l'acceuil */
+/* enlever l'ombre du bloc */
 .heading{
     box-shadow: none;
     &__retour-acceuil{
