--- a/sass/layout/_description-head.scss
+++ b/sass/layout/_description-head.scss
@@ -5,11 +5,7 @@
 
 /* ..... bloc qui contient la section information ...... */
 .description{
-    height: $size-height-descrip;
     height: $height-descrip;
-    @include responsive(tablette){
-        height: $height-descrip -40px;
-    };
     /* bloc avec la localisation */
     &__loc{
         width: 100%;
@@ -18,32 +14,15 @@
         font-size: $size-txt-loc;
         color: lighten(black, 25%);
         @include display-center;
-        /* tablette */
-        @include  responsive(tablette){
-            font-size: $size-txt-loc * 1.2;
-        };
-        /* desktop */
-        @include responsive(desktop){
-            font-size: $size-txt-loc * 1.4;
-        };
         /* logo localisation */
         i{
             margin: 0px 20px;
             margin-bottom: 5px;
             font-size: $size-logo-loc;
-            @include  responsive(tablette){
-                font-size: $size-txt-loc * 1.8;
-            };
         }
         /* nom de la ville, localisation */
         &-city{
             margin-right: 10%;
-            @include responsive(tablette){
-                margin-right: 5%;
-            };
-            @include responsive(desktop){
-                margin-right: 0%;
-            };
         }
     }
     /* ...... bloc haut avec le titre, la phrase et le bouton ....... */
@@ -62,10 +41,6 @@
             font-weight: 600;
             margin-top: 30px;
             margin-bottom: 0px;
-            /* tablette */
-            @include responsive(tablette){
-                font-size: $size-title * 1.2;
-            };
         }
         /* phrase sous le titre */
         &-sentance{
@@ -75,10 +50,6 @@
             margin-top: 0px;
             margin-bottom: 30px;
             color: lighten(black, 45%);
-            /* tablette */
-            @include responsive(tablette){
-                font-size: $size-sentance-comp * 1.1;
-            };
         }
         /* boutons pour aller voir les restaurants */
         &-resto{
@@ -92,12 +63,6 @@
             min-width: $min-width-btn;
             @include color-btn;
             @include display-center;
-            /* tablette */
-            @include responsive(tablette){
-                font-size: calc($size-title/1.3);
-                height: $height-btn;
-                max-width: $min-width-btn *1.4;
-            };
         }
     }
     /* ...... Explication sur l'utilisation du site ....... */
@@ -109,20 +74,8 @@
             font-size: $size-title;
             margin-top: 50px;
             margin-bottom: 10px;
-            @include responsive(tablette){
-                font-size: $size-title * 1.2;
-                text-align: center;
-            };
         }
-        /* bloc contenant les 3 etapes de l'explication */
-        &-liste{
-            /* tablette */
-            @include responsive(tablette){
-                display: flex;
-                justify-content: space-around;
-            };
-        }
-        /* ........ blocs contenant les explications ....... */
+        /* ....... bloc contenant les 3 etapes de l'explication .......... */
         @include creat-selec(3){
             display: flex;
             align-items: center;
@@ -132,24 +85,6 @@
             border-radius: 25px;
             background-color: lighten($color-back, 4%);
             box-shadow: 4px 4px 15px lighten($shadow-head, 10%);
-            /* tablette */
-            @include responsive(tablette){
-                height: $height-expl-tab;
-                width: $height-expl-tab;
-                border-radius: calc($height-expl-tab / 2);
-                position: relative;
-            };
-            /* desktop */
-            @include responsive(desktop){
-                box-sizing: border-box;
-                width: $height-expl-tab * 1.25;
-                height: $height-expl-tab * 1.25;
-                border-radius: $height-expl-tab * 0.625;
-                flex-direction: column;
-                padding-top: 75px;
-                font-size: $size-expl-txt;
-
-            };
             /* leger changement de couleur, passage souris */
             &:hover{
                 transition: 200ms ease-in-out;
@@ -168,23 +103,6 @@
                 border-radius: 15px;
                 width: $size-num-expl;
                 height: $size-num-expl;
-                /* tablette */
-                @include responsive(tablette){
-                    width: $size-num-expl + 10px;
-                    height: $size-num-expl + 10px;
-                    border-radius: 20px;
-                    left: 87.5px;
-                    top: 0px;
-                    font-size: 25px;
-                };
-                /* desktop */
-                @include responsive(desktop){
-                    width: $size-num-expl + 15px;
-                    height: $size-num-expl + 15px;
-                    left: 110px;
-                };
-                
-
             }
             /* logo dans le bloc d'explication */
             i{
@@ -192,28 +110,13 @@
                 margin-left: 45px;
                 margin-right: 30px;
                 color: lighten(black, 50%);
-                @include responsive(tablette){
-                    margin-top: 25px;
-                    font-size: 25px;
-                    margin-right: 15px;
-                };
-                @include responsive(desktop){
-                    margin-right: 35px;
-                    font-size: $size-logo-fonc *1.5;
-                    margin-bottom: 0px;
-                };
             }
             /* texte dans le bloc d'explication */
             &txt{
                 color: lighten(black, 20%);
                 font-weight: bold;
-                @include responsive(tablette){
-                    padding-top: 25px;
-                };
-                @include responsive(desktop){
-                    margin-top: 0px;
-                };
             }
         }
     }
 }
+
